añado asignatura al segundo curso

--- a/EntornosGIT/public_html/index.html
+++ b/EntornosGIT/public_html/index.html
@@ -11,8 +11,15 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
     </head>
     <body>
         <h1>Modulo de Desarrollo de aplicaciones multiplataforma</h1>
+	<h2>Primer curso</h2>
         <ul>
             <li>Entornos de desarrollo</li>
+	    <li>Sistemas informaticos</li>
         </ul>
+	<h3>Segundo curso</h3>
+	<ul>
+	    <li>Desarrollo de interfaces</li>	
+	</ul>	
+	
     </body>
 </html>
